[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_features"
version = "0.0.1"
authors = [
  { name="Yue Pan", email="panyue10@163.com" },
]
description = "Generate features,Use features, Handel features."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.3",
    "pydash>=7.0.6",
    "PyYAML==6.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=0.21.0"
]

[project.urls]
